[package]
name = "Client"
version = "0.1.0"
edition = "2021"

[dependencies]
cryptography = { path = "/home/wojteq18/codes/crypto_project/Cryptography" }
mysql = "23.0"
tokio = { version = "1", features = ["full"] }
eframe = "0.26"   # GUI (egui)
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.0"
actix-cors = "0.6.4"
serde_json = "1.0"
